# LaserTarget

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
asr/: 命令词列表_中文模板.xlsx  播报词列表_中文模板.xlsx
components/my_board/my_board_v1_0/: board.c  board.h  board_def.h  board_pins_config.c
components/my_board/my_codec_driver/: new_codec.c  new_codec.h
components/smart_utilities/: CMakeLists.txt
components/smart_utilities/common/: common.c  nvs_db.c  power_save.c
components/smart_utilities/include/: http_cmd.h  i2c.h  smart_utility.h  smartgw_types.h
components/smart_utilities/network/: config_discovery.c  http_cmd.cpp  log_client.c  sntp.c  wifi_smartconfig.c
components/smart_utilities/ota/: ota_updater.cpp
components/smart_utilities/sensor/: adc_converter.c  i2c.c
main/: ASRCOmmandProc.h  ASRCommandProc.cpp  AutoTurret.cpp  AutoTurret.h  BLEMgr.cpp  BLEMgr.h  CMakeLists.txt  EpicBase.cpp  EpicBase.h  EpicMgr.cpp  EpicMgr.h  IRMTransceiver.cpp  IRMTransceiver.h  LaserReceiver_IS0803.cpp  LaserReceiver_IS0803.h  LaserReceiver_PCNT.cpp  LaserReceiver_PCNT.h  LedStrip.cpp  PowerMonitor.cpp  PowerMonitor.h  RadarMgr.cpp  RadarMgr.h  SegDisplay.cpp  SegDisplay.h  SoundPlayer.cpp  SoundPlayer.h  TargetServo.cpp  TargetServo.h  app_main.cpp  ble_net.c  ble_net.h  laser_receiver.c  rmt_uart.c  rmt_uart.h
utils/: lzss.py  rle-n.py  rle-o1.py  wav2mp3.py  wav_rle_compress.py
